# Spider-Droid

./: .gitignore  README.md  default.tag  diff_local_remote  do_sparse_checkout  epsilon_custom.ecm
Alibre CAD/: Eye Assembly.AD_ASM  Frame Assembly.AD_ASM  Frame-LF.AD_PRT  Head Assembly.AD_ASM  Hip V2.AD_PRT  Hip V3.AD_PRT  Leg Assembly V2.AD_ASM  Leg Assembly V3.AD_ASM  Motor Mount - Legs.AD_PRT  Shin V2.AD_PRT  Spider Droid Assembly.AD_ASM  Spider Globals.csv  Tendon Pulley - K.AD_PRT  Tendon Pulley - T.AD_PRT  Tendon Pulley.AD_PRT  Thigh V2.AD_PRT  Thigh.AD_PRT  Trimpot Adapter.AD_PRT
Artwork/: PHI Keychain.AD_PRT  Spider Droid Traced Scaling.xlsx  Thumbs.db  Traced Image.AD_DRW  Traced V0_3.AD_DRW  Traced-Letter-Phi.AD_DRW  Traced-Letter_Phi.AD_DRW
Docs/After Print Procedure/: after_print_procedures.txt
Docs/Math/: Phi Data Cubic Extrapolation.docx  Project Related Thoughts.docx  Torque.xlsx  cubic_extrapolator.m
Docs/To-Do/: Electronics.txt  Firmware.txt  Mechanical.txt  Software.txt
Docs/Wiring And Harnesses/: Phi Wiring.docx  Wiring & Harnesses.psd
Docs/Word/: Cause & Effect Algorithm.docx  Label Prob Appendix.docx  Statistics & Confidence.docx  _INDEX.docx
FormLabs/: Motor Mount.form
GeoMagic/: Centerpost Retrofit.AD_PRT  DOME-TEST.AD_PRT  Dome - Ribbed.AD_ASM  Dome - Solid.AD_PRT  Dome Adapter.AD_PRT  Dome Base Part.AD_PRT  Dome Rod.AD_PRT  Dome Section L.AD_PRT  Dome Section R.AD_PRT  Dome Section.AD_PRT  Dome.AD_ASM  Droid Trace Part.AD_PRT  Frame.AD_PRT  Head Cap.AD_PRT  Head.AD_ASM  Hip - BIG.AD_PRT  Hip Bearing Holder.AD_PRT  Hip Bearing Mount.AD_PRT  Hip Bearing Unit.AD_ASM  Hip Brg Mount  Chopper Tool.AD_PRT  Hip Brg Mount - Chopped 1.AD_PRT  Hip Motor Mount.AD_PRT  Hip Pin.AD_PRT  Hip Pot Mount.AD_PRT  Hip Rocker.AD_PRT  Hip Unit.AD_ASM  Hip.AD_PRT  Jig - Nut Holder.AD_PRT  Jig - Phi Stand Adapter.AD_PRT  Jig - Phi Stand Base.AD_PRT  Jig - Pulley Jacket.AD_PRT  Jig - Wire Align 2.AD_PRT  Jigs - ALL.AD_ASM  Leg Adapter.AD_PRT  Leg Control.AD_ASM  Leg Frame.AD_PRT  Leg Unit.AD_ASM  Leg.AD_ASM  Logic Unit.AD_ASM  Main.AD_ASM  (+27 more)
GeoMagic/Before Refactor/: Eye Assembly.AD_ASM  Eye Cone - Tooled.AD_PRT  Hip V3.AD_PRT  Leg Assembly V3.AD_ASM  Part Hierarchy.docx  Phi-Letter.AD_PRT  Phi-Text.AD_PRT  Skirt.AD_PRT  Tendon Pulley - T - V2.AD_PRT
GeoMagic/Mechnical Reference/: Dome.AD_PRT  Frame.AD_PRT  Hip.AD_PRT  Machinery.AD_PRT  Phi.AD_ASM  Shin.AD_PRT  Skirt.AD_PRT  Thigh.AD_PRT
GeoMagic/Old-Versions.SAVE/: Body Shell.AD_PRT  Heel.AD_PRT  Hip Attach Plate.AD_PRT  Joint - Part A.AD_PRT  Leg Assembly.AD_ASM  Leg Trace Part.AD_PRT  Motor Mount Assembly.AD_ASM  Shin-old.AD_PRT  Shin.AD_PRT  Spider Droid Assembly.AD_ASM  Tendon Pulley - T - V2.AD_PRT  Trimpot Adapter.AD_PRT
GeoMagic/Version 0.1 - Abandoned/: Assembly - Pulley V3.AD_ASM  Dome Section L.AD_PRT  Hip Motor Mount.AD_PRT  Hip Unit.AD_ASM  Hip.AD_PRT  Jig - Phi Stand Adapter.AD_PRT  Jig - Pot Prep 1.AD_PRT  Leg Pin.AD_PRT  (+18 more)
Math/: Torque.xlsx
Phi Schematics/: Phi-1.s##  Phi.s#3  Phi.s#4  Phi.s#6  eagle.epf
Software/firmware/: ANDRE-VMWARE-ISSUES.txt  CMakeLists.txt  build  debug  eclipse.save  go  reset.net  sysinfo  syslog  tags-rpi  tags-ubuntu
Software/firmware/include/: bcm2835_gpio.h  datalog.h  event_gate.h  globals.h  hal.h  hal_phi.h  hal_stub.h  mcp3008.h  motor.h  osepp_adxl345.h  phi.h  phi_defs.h  phi_funcs.h  philink.h  plax_L3G4200D.h  polulu_2s9v1.h
Software/firmware/src/: CMakeLists.txt  Makefile  cmdline.c  cubic.c  datalog.c  event_gate.c  failsafe.c  gpio.c  gyro.c  hal.c  hal_phi.c  hal_stub.c  hw_pump.c  jsmn.c  main.c  motor.c  phi_utils.c  philink.c  selftest.c  spi.c  uart.c  webadmin.c  webjson.c
Software/firmware/test/: test_motors  test_uart
(+411 files in other folders)
